Migrate to microservices - User service